--- a/Loweb/Loweb.vcxproj
+++ b/Loweb/Loweb.vcxproj
@@ -94,7 +94,7 @@
   <ItemGroup>
     <ClCompile Include="Apps\Application.cpp" />
     <ClCompile Include="ProjectConfig.cpp" />
-    <ClCompile Include="Utils\generateRandomString.cpp" />
+    <ClCompile Include="Utils\generateRandomCSRFToken.cpp" />
     <ClCompile Include="Utils\Low-level\HttpRequest.cpp" />
     <ClCompile Include="Utils\Low-level\HttpResponse.cpp" />
     <ClCompile Include="Utils\Low-level\Server.cpp" />
@@ -107,7 +107,7 @@
     <ClInclude Include="Apps\Application.h" />
     <ClInclude Include="dll\ExportDLL.h" />
     <ClInclude Include="ProjectConfig.h" />
-    <ClInclude Include="Utils\generateRandomString.h" />
+    <ClInclude Include="Utils\generateRandomCSRFToken.h" />
     <ClInclude Include="Utils\Low-level\HttpRequest.h" />
     <ClInclude Include="Utils\Low-level\HttpResponse.h" />
     <QtMoc Include="Utils\Low-level\Server.h" />
